# nabu_agent

./: README.md  main.py  pyproject.toml  whisper_test.py
data/: preestablished_commands.json
src/nabu_agent/: main.py
src/nabu_agent/data/: preestablished_commands.json  preestablished_commands.py
src/nabu_agent/tools/: agents.py  spotify.py  web_loader.py
src/nabu_agent/utils/: schemas.py
src/nabu_agent/workflows/main/: nodes.py  state.py  workflow.py
src/nabu_agent/workflows/spotify_agent/: nodes.py  workflow.py
src/nabu_langgraph/: __init__.py  main.py
src/nabu_langgraph/workflows/main/: workflow.py
tests/: conftest.py  test_classifier_agent.py  test_workflows.py
tools/: agents.py  misc.py  spotify.py
utils/: schemas.py
workflows/main/: nodes.py  state.py  workflow.py
workflows/spotify_agent/: nodes.py  workflow.py
