[project]
name = "nabu-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.33",
    "langgraph>=0.4.8",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "spotipy>=2.25.1",
]
log_cli = 1
log_cli_level = "INFO"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
