[project]
name = "nabu-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-openai>=0.3.33",
    "langgraph>=0.4.8",
    "librosa>=0.11.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.11.7",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "spotipy>=2.25.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
nabu-agent = "nabu_agent:main.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
